--- a/IDS_deepdive_demo.ipynb
+++ b/IDS_deepdive_demo.ipynb
@@ -13,7 +13,27 @@
    "id": "908795eb-fce4-43b8-937f-58d82d082962",
    "metadata": {},
    "source": [
-    "## Section 0: Setup of Workbench Space"
+    "## Section 0: Setup of Workbench Space\n",
+    "\n",
+    "To start this practical, we first must setup our workbench space within Qwiki-labs environment, this is a step one will not need to complete within the IDS environment, however for today's practical we will. For this we can follow the steps highlighted in Task 1 of the Lab. \n",
+    "\n",
+    "When we've followed all those steps, and we've reached Task 2, we can then import this repo from git, using the command\n",
+    "\n",
+    "<code> !git clone https://github.com/wisejthomas/ids_deepdive_demo </code>\n",
+    "\n",
+    "This will import this practical and demo into this workspace! \n",
+    "\n",
+    "### Important Definitions \n",
+    "\n",
+    "At this point, it is important to cover a few critical definitions:\n",
+    "\n",
+    "- **BigQuery** BigQuery is a fully managed, AI-ready data platform that helps you manage and analyze your data with built-in features like machine learning, search, geospatial analysis, and business intelligence. BigQuery's serverless architecture lets you use languages like SQL and Python to answer your organization's biggest questions with zero infrastructure management.\n",
+    "\n",
+    "- **JupyterLab** JupyterLab is a highly extensible, feature-rich notebook authoring application and editing environment, and is a part of Project Jupyter, a large umbrella project centered around the goal of providing tools (and standards) for interactive computing with computational notebooks.\n",
+    "\n",
+    "- **Vertex AI Workbench instance** Vertex AI Workbench instances are Jupyter notebook-based development environments on Google Cloud for the entire data science workflow. Vertex AI Workbench instances are prepackaged with JupyterLab. Vertex AI Workbench instances have integrations and features can make it easier to access your data, process data faster, schedule notebook runs, and more.\n",
+    "\n",
+    "For most of these methods, we will use a Python JupyterLab Kernel. In the Jupyter architecture, kernels are separate processes started by the server that run your code in different programming languages and environments. We will use the IPython Jupyter Kernel that comes prepackaged with Vertex AI Workbench Instances. This will allow us to execute Python code in this notebook interactively.\n"
    ]
   },
   {
@@ -21,7 +41,20 @@
    "id": "5315a909-d60c-409d-8dde-444b0024120b",
    "metadata": {},
    "source": [
-    "## Section 1: Navigating Data in BigQuery Studio "
+    "## Section 1: Navigating Data in BigQuery Studio \n",
+    "\n",
+    "To explore that data available to you within your project space, we can use the BigQuery Studio space. This is a UI on Google Cloud, which allows your to view information such as column names and descriptions, as well as a preview of the data. \n",
+    "\n",
+    "To access this UI you can select this link \n",
+    "- Link: https://console.cloud.google.com/bigquery \n",
+    "- Navigate via the UI to BigQuery >> Studio\n",
+    "\n",
+    "Here we can begin to explore the public data, in particular, the London Fire Brigade call outs in 2017. We can explore this data by following these steps: \n",
+    "\n",
+    "- Select project \"bigquery-public-data\" (if you don't see it, don't panic, just search for \"*London*\" in the search bar and it should appear!)\n",
+    "    - Locate and select the dataset: \"london_fire_brigade\"\n",
+    "        - Select table: \"fire_brigade_service_calls\"\n",
+    "            - We can then preview a sample of this table, as well as view information such as column descriptions."
    ]
   },
   {
@@ -29,7 +62,8 @@
    "id": "48adf00e-360a-4ea0-bbb9-ab175743b4a4",
    "metadata": {},
    "source": [
-    "## Section 2: Introducing Jupyter Lab for Python "
+    "## Section 2: Introducing Jupyter Lab for Python \n",
+    "\n"
    ]
   },
   {
@@ -42,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 1,
    "id": "c1bd3044-b7cb-4cd9-8a7c-4e7b5b3a91e1",
    "metadata": {
     "tags": []
@@ -92,7 +126,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "id": "a556fabc-4d7c-481a-b0bc-a5c00d967d7f",
    "metadata": {
     "tags": []
@@ -115,7 +149,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "id": "d54a55fa-6036-4d68-9c99-84351cd0cd02",
    "metadata": {
     "tags": []
@@ -124,7 +158,7 @@
     {
      "data": {
       "text/html": [
-       "Query job 370b6d06-9a25-44fd-8e6e-31b5ff768c6e is DONE. 0 Bytes processed. <a target=\"_blank\" href=\"https://console.cloud.google.com/bigquery?project=qwiklabs-gcp-02-c30bf58ba711&j=bq:EU:370b6d06-9a25-44fd-8e6e-31b5ff768c6e&page=queryresults\">Open Job</a>"
+       "Query job 74d97fdc-0603-4439-a4f3-8774d4349aca is DONE. 0 Bytes processed. <a target=\"_blank\" href=\"https://console.cloud.google.com/bigquery?project=qwiklabs-gcp-02-fdd34316e29e&j=bq:EU:74d97fdc-0603-4439-a4f3-8774d4349aca&page=queryresults\">Open Job</a>"
       ],
       "text/plain": [
        "<IPython.core.display.HTML object>"
@@ -170,7 +204,7 @@
        " 'num_pumps_attending']"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -431,7 +465,7 @@
    "uri": "us-docker.pkg.dev/deeplearning-platform-release/gcr.io/workbench-notebooks:m128"
   },
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel) (Local)",
+   "display_name": "Python 3 (ipykernel) (Local) (Local)",
    "language": "python",
    "name": "conda-base-py"
   },
