Worksheet & Solution Sheet Additions

--- a/IDS_deepdive_demo.ipynb
+++ b/IDS_deepdive_demo.ipynb
@@ -5,7 +5,9 @@
    "id": "d16d4665-a9e5-4c96-8ecb-33dc4c4bfeb0",
    "metadata": {},
    "source": [
-    "# Introduction "
+    "# Introduction \n",
+    "\n",
+    "This demonstration page is to provide a learning scaffold for the upcoming IDS Deep Dive session, this is to be accompanied by a practical worksheet which users can complete at their own pace after this session. We encourage users to follow along with us within the session, and having a go at the various exercises within the parrellel worksheet following the session. "
    ]
   },
   {
@@ -76,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 2,
    "id": "c1bd3044-b7cb-4cd9-8a7c-4e7b5b3a91e1",
    "metadata": {
     "tags": []
@@ -129,7 +131,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "a556fabc-4d7c-481a-b0bc-a5c00d967d7f",
    "metadata": {
     "tags": []
@@ -152,7 +154,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "d54a55fa-6036-4d68-9c99-84351cd0cd02",
    "metadata": {
     "tags": []
@@ -161,7 +163,7 @@
     {
      "data": {
       "text/html": [
-       "Query job d02395ad-fc0e-4893-915d-7ac6224bef58 is DONE. 0 Bytes processed. <a target=\"_blank\" href=\"https://console.cloud.google.com/bigquery?project=qwiklabs-gcp-00-ed2fbeb20c45&j=bq:EU:d02395ad-fc0e-4893-915d-7ac6224bef58&page=queryresults\">Open Job</a>"
+       "Query job d3e776a9-ed8a-4cbf-b1d2-22c92b8293ce is DONE. 0 Bytes processed. <a target=\"_blank\" href=\"https://console.cloud.google.com/bigquery?project=qwiklabs-gcp-02-9e5deef6c9cb&j=bq:EU:d3e776a9-ed8a-4cbf-b1d2-22c92b8293ce&page=queryresults\">Open Job</a>"
       ],
       "text/plain": [
        "<IPython.core.display.HTML object>"
@@ -207,7 +209,7 @@
        " 'num_pumps_attending']"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -240,7 +242,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "id": "4d911611-bca0-4972-b7c1-cab9f56e7fd4",
    "metadata": {
     "tags": []
@@ -249,7 +251,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "9650b338d7fb4105855ead59c236e01a",
+       "model_id": "94092a4423304e4ca6ec0c63f5450698",
        "version_major": 2,
        "version_minor": 0
       },
@@ -263,7 +265,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "d3602eaed83b4b2cbce3ef30181773e9",
+       "model_id": "05c8905dfaf849d8b88ae04b9048cd35",
        "version_major": 2,
        "version_minor": 0
       },
@@ -290,7 +292,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "id": "ecbc0109-df19-4252-a573-4030499bbe7b",
    "metadata": {
     "tags": []
@@ -360,7 +362,7 @@
        "4             4                    485"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -384,7 +386,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "id": "88047715-5809-4482-9933-a0d009da36ef",
    "metadata": {
     "tags": []
@@ -393,7 +395,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "0d1df4f7aae845d7bd5d79d8cc630367",
+       "model_id": "3f6d2ab776cf4f8e9e1917fc18bcc173",
        "version_major": 2,
        "version_minor": 0
       },
@@ -407,7 +409,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "be8d575b574b4799aae92bb1108c54b7",
+       "model_id": "1f2b308aab0c4ab1933970a2e50bc7f4",
        "version_major": 2,
        "version_minor": 0
       },
@@ -431,7 +433,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "id": "15227033-c0c5-4d59-a016-de52dc808fb4",
    "metadata": {
     "tags": []
@@ -528,7 +530,7 @@
        "max            23.0                                6.0                  7.0"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -541,18 +543,22 @@
   {
    "cell_type": "markdown",
    "id": "467ae235-3883-4cb6-956a-524c913c05a0",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "source": [
     "### Section 3d: Building Cross Tabs \n",
     "\n",
     "Cross tabs can be used to examine the relationship between two categorical variables. This can be extremely beneficial to understand the frequency of different occuring factors and to begin to further understand the data presented. \n",
     "\n",
-    "When building cross tabs, there are two methods, one which utilizes Pandas, and can only be done locally, or one which utilizes a mix of different functions and therefore can be completed in a cloud enviornment. For both instances within this example, we will look at the relationship between Incident Group and Property Category. "
+    "When building cross tabs, the easiest method for medium sized datasets at present is utilizing Pandas, on your local memory. This is because at present the same function is yet to be fully available within the BigFrames library. \n",
+    "\n",
+    "For this example, we will look at the relationship between Incident Group and Property Category. "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "id": "b1933e10-09b9-4a00-90b4-625d492fcbd4",
    "metadata": {
     "tags": []
@@ -561,7 +567,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "e576af09de0b4d8181b899880c9a6864",
+       "model_id": "782687f1f03740019cf681034fc3b1d3",
        "version_major": 2,
        "version_minor": 0
       },
@@ -575,7 +581,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "2b7ee6efda1b4666b535b3abcec88b09",
+       "model_id": "ab833da2c8c8438ab61c55e44cdd17bb",
        "version_major": 2,
        "version_minor": 0
       },
@@ -598,7 +604,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 10,
    "id": "caf8e094-9860-4f7b-ae7f-a0ccff7d763b",
    "metadata": {
     "tags": []
@@ -709,27 +715,17 @@
        "Special Service              10          1700  "
       ]
      },
-     "execution_count": 14,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# Method 1: Pandas \n",
+    "# Crosstab in Pandas \n",
     "## https://pandas.pydata.org/docs/reference/api/pandas.crosstab.html\n",
     "pd.crosstab(\n",
     "    crosstab_explore_data.incident_group, \n",
     "    crosstab_explore_data.property_category)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "f9c2b050-86bf-4cb9-81b4-eadbdbf97f52",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Method 2: "
    ]
   },
   {
