Worksheet & Solution Completion

--- a/IDS_deepdive_demo_worksheet-Copy1.ipynb
+++ b/IDS_deepdive_demo_worksheet-Copy1.ipynb
@@ -62,7 +62,6 @@
     "# Fill in the Blanks\n",
     "\n",
     "# Load data from BigQuery\n",
-    "print(\"step 1-of-3 :: loading data from BigQuery\")\n",
     "query_or_table = \"bigquery-public-data.london_fire_brigade.---\" # [Insert the table name here]\n",
     "bq_df = bpd.read_gbq(---, use_cache=False) # [Insert Variable Name Here]\n",
     "\n",
@@ -102,6 +101,18 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b99655b2-da92-4fdb-a147-afbede5d5ea3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Lets check what results you got!\n",
+    "\n",
+    "hour_of_call_outdoorcategory"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "6b90fded-2729-4a97-b5e2-1f939f13a666",
    "metadata": {},
@@ -125,7 +136,43 @@
    "metadata": {},
    "source": [
     "## Section 3c: Basic Descriptive Statistics\n",
-    "\n"
+    "\n",
+    "As we have already explored all of the available numerical variables for the given dataset, lets jump across to a slightly different dataset to explore this skill further. \n",
+    "\n",
+    "Using the staged prompts available, explore the dataset \"\n",
+    "bigquery-public-data.noaa_hurricanes.hurricanes\", particularly exploring the numerical data and producing basic descriptive statistics for: \n",
+    "\n",
+    "- wmo_wind \n",
+    "- wmo_pressure \n",
+    "- usa_wind\n",
+    "- usa_pressure\n",
+    "- cma_presure \n",
+    "\n",
+    "Please check the solution sheet for our answer, however, like most programming, there will always be multiple ways to conduct this analysis! \n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5d6f56db-17b9-4149-a18e-93f414da9c07",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%%bigquery hurricane_description\n",
+    "SELECT \n",
+    "    ----, # [Insert Variables here]\n",
+    "FROM \n",
+    "    bigquery-public-data.noaa_hurricanes.hurricanes"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e9d63a1e-3893-4c33-8cff-e0e8917dae3f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "hurricane_description.------ # [Insert describe function]"
    ]
   },
   {
@@ -133,7 +180,72 @@
    "id": "c78b8411-850e-4753-8ebe-81d1a32dc0fe",
    "metadata": {},
    "source": [
-    "## Section 3d: Building Cross Tabs "
+    "## Section 3d: Building Cross Tabs \n",
+    "Lets build some more complex crosstabs, for this we will explore the 'stop_code_description', and 'property_category'. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "dd802637-5745-48f0-b9aa-0eb23aeb615b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%%bigquery crosstab_explore_data_stopcategory\n",
+    "SELECT \n",
+    "    -----, # [Insert Variables]\n",
+    "FROM \n",
+    "    bigquery-public-data.london_fire_brigade.fire_brigade_service_calls"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "17f0e005-c2a5-4449-baa2-75b74f3237e2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Crosstab in Pandas \n",
+    "## https://pandas.pydata.org/docs/reference/api/pandas.crosstab.html\n",
+    "pd.crosstab(\n",
+    "    ------,\n",
+    "    ------) # [Insert the two elements needed]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d92382ba-46a0-498c-b592-017714a65f5f",
+   "metadata": {},
+   "source": [
+    "Taking this further, we can now explore the breakdown between \"stop_code_description\" and \"property_type\"."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "95bce3d6-e505-4c6c-831e-90fa53e4a778",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%%bigquery crosstab_explore_data_stoptype\n",
+    "SELECT \n",
+    "    -----, # [Insert Variables]\n",
+    "FROM \n",
+    "    bigquery-public-data.london_fire_brigade.fire_brigade_service_calls"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "847f54d6-b78e-4f45-a2b6-4a323caaf37a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Crosstab in Pandas \n",
+    "## https://pandas.pydata.org/docs/reference/api/pandas.crosstab.html\n",
+    "pd.crosstab(\n",
+    "    ------,\n",
+    "    ------) # [Insert the two elements needed]"
    ]
   },
   {
@@ -149,12 +261,48 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5d011ca3-b18d-4785-a533-b5543cae0509",
+   "id": "c38dd0ea-5614-4ed9-a717-31a44f11ace8",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Bar Chart 1: "
+    "# Bar Chat 1: \n",
+    "    # For this we will want to call hour of call vs incident number count \n",
+    "plt.bar(hour_of_call_outdoorcategory.----, # [Call our X Variable]\n",
+    "        hour_of_call_outdoorcategory.----) # [Call our Y variable]\n",
+    "# Label our X and Y axis and Title \n",
+    "plt.xlabel('----') # [Give a relevant X Label \n",
+    "plt.ylabel('----') # [Give a relevant Y Label]\n",
+    "plt.title('Number of Incidents recorded for Outdoor Callouts per Hour')"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "08d34a9a-c544-4a3a-83ea-d5a73bb18ba3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Bar Chat 2: \n",
+    "    # For this we will want to call Incident Group vs incident number count "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1799a1d6-0a17-47e9-b96b-55c08d31e492",
+   "metadata": {},
+   "source": [
+    "## Extension\n",
+    "\n",
+    "If you would like to explore these skills and explore further, our suggestion is to rerun these exercises with the Hurricanes Dataset used within Section 3c. Focusing on variables such as 'mlc_class', 'mlc_wind' and 'mlc_pressure' and how this varies from other metrics such as nadi, usa and cma. These however will not have solutions here, but we will be happy to discuss them during the deep dive to help fuel your imagination! \n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6e6c8d4c-9734-42b0-a847-9eadcf366cc2",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
