--- a/IDS_deepdive_demo.ipynb
+++ b/IDS_deepdive_demo.ipynb
@@ -7,7 +7,10 @@
    "source": [
     "# Introduction \n",
     "\n",
-    "This demonstration page is to provide a learning scaffold for the upcoming IDS Deep Dive session, this is to be accompanied by a practical worksheet which users can complete at their own pace after this session. We encourage users to follow along with us within the session, and having a go at the various exercises within the parrellel worksheet following the session. "
+    "This demonstration page is to provide a learning scaffold for the upcoming IDS Deep Dive session, this is to be accompanied by a practical worksheet which users can complete at their own pace after this session. We encourage users to follow along with us within the session, and having a go at the various exercises within the parrellel worksheet following the session. \n",
+    "\n",
+    "## Important Note: \n",
+    "We have arranged with Google for this Qwiki-labs enviornment to remain open until April 1st. Please note, this is only to be used to complete and engage with this demonstration, with any deviation having action taking against the account, with this in order to maintain the integrity of the platform. This means you can restart and complete this lab as many times as you would like, however please only explore the capabilities of bigquery & jupyter lab in line with this demonstration and practical and nothing else. "
    ]
   },
   {
@@ -78,22 +81,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "c1bd3044-b7cb-4cd9-8a7c-4e7b5b3a91e1",
    "metadata": {
     "tags": []
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "\u001b[1m[\u001b[0m\u001b[34;49mnotice\u001b[0m\u001b[1;39;49m]\u001b[0m\u001b[39;49m A new release of pip is available: \u001b[0m\u001b[31;49m25.0\u001b[0m\u001b[39;49m -> \u001b[0m\u001b[32;49m25.0.1\u001b[0m\n",
-      "\u001b[1m[\u001b[0m\u001b[34;49mnotice\u001b[0m\u001b[1;39;49m]\u001b[0m\u001b[39;49m To update, run: \u001b[0m\u001b[32;49mpip install --upgrade pip\u001b[0m\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Install a pip package in the current Jupyter kernel\n",
     "# here the package is bigframes https://pypi.org/project/bigframes/\n",
@@ -131,89 +124,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "a556fabc-4d7c-481a-b0bc-a5c00d967d7f",
    "metadata": {
     "tags": []
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "step 1-of-3 :: loading data from BigQuery\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Load data from BigQuery\n",
-    "print(\"step 1-of-3 :: loading data from BigQuery\")\n",
     "query_or_table = \"bigquery-public-data.london_fire_brigade.fire_brigade_service_calls\"\n",
     "bq_df = bpd.read_gbq(query_or_table, use_cache=False)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "d54a55fa-6036-4d68-9c99-84351cd0cd02",
    "metadata": {
     "tags": []
    },
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "Query job d3e776a9-ed8a-4cbf-b1d2-22c92b8293ce is DONE. 0 Bytes processed. <a target=\"_blank\" href=\"https://console.cloud.google.com/bigquery?project=qwiklabs-gcp-02-9e5deef6c9cb&j=bq:EU:d3e776a9-ed8a-4cbf-b1d2-22c92b8293ce&page=queryresults\">Open Job</a>"
-      ],
-      "text/plain": [
-       "<IPython.core.display.HTML object>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/plain": [
-       "['incident_number',\n",
-       " 'date_of_call',\n",
-       " 'cal_year',\n",
-       " 'time_of_call',\n",
-       " 'hour_of_call',\n",
-       " 'timestamp_of_call',\n",
-       " 'incident_group',\n",
-       " 'stop_code_description',\n",
-       " 'special_service_type',\n",
-       " 'property_category',\n",
-       " 'property_type',\n",
-       " 'address_qualifier',\n",
-       " 'postcode_full',\n",
-       " 'postcode_district',\n",
-       " 'borough_code',\n",
-       " 'borough_name',\n",
-       " 'proper_case',\n",
-       " 'ward_code',\n",
-       " 'ward_name',\n",
-       " 'ward_name_new',\n",
-       " 'easting_m',\n",
-       " 'northing_m',\n",
-       " 'easting_rounded',\n",
-       " 'northing_rounded',\n",
-       " 'frs',\n",
-       " 'incident_station_ground',\n",
-       " 'first_pump_arriving_attendance_time',\n",
-       " 'first_pump_arriving_deployed_from_station',\n",
-       " 'second_pump_arriving_attendance_time',\n",
-       " 'second_pump_arriving_deployed_from_station',\n",
-       " 'num_stations_with_pumps_attending',\n",
-       " 'num_pumps_attending']"
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Lets double check our column names \n",
     "list(bq_df)"
@@ -242,41 +172,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "4d911611-bca0-4972-b7c1-cab9f56e7fd4",
    "metadata": {
     "tags": []
    },
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "94092a4423304e4ca6ec0c63f5450698",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Query is running:   0%|          |"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "05c8905dfaf849d8b88ae04b9048cd35",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Downloading:   0%|          |"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "%%bigquery hour_of_call_incident_count\n",
     "SELECT \n",
@@ -292,81 +193,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "id": "ecbc0109-df19-4252-a573-4030499bbe7b",
    "metadata": {
     "tags": []
    },
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>hour_of_call</th>\n",
-       "      <th>incident_number_count</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>0</td>\n",
-       "      <td>976</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>1</td>\n",
-       "      <td>879</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>2</td>\n",
-       "      <td>645</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>3</td>\n",
-       "      <td>549</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>4</td>\n",
-       "      <td>485</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "   hour_of_call  incident_number_count\n",
-       "0             0                    976\n",
-       "1             1                    879\n",
-       "2             2                    645\n",
-       "3             3                    549\n",
-       "4             4                    485"
-      ]
-     },
-     "execution_count": 6,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# In the meantime however, we can view the first five hours of the day!\n",
     "hour_of_call_incident_count.head()"
@@ -386,41 +218,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "id": "88047715-5809-4482-9933-a0d009da36ef",
    "metadata": {
     "tags": []
    },
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "3f6d2ab776cf4f8e9e1917fc18bcc173",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Query is running:   0%|          |"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "1f2b308aab0c4ab1933970a2e50bc7f4",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Downloading:   0%|          |"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "%%bigquery fire_numerical_describe\n",
     "SELECT \n",
@@ -433,108 +236,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "id": "15227033-c0c5-4d59-a016-de52dc808fb4",
    "metadata": {
     "tags": []
    },
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>hour_of_call</th>\n",
-       "      <th>num_stations_with_pumps_attending</th>\n",
-       "      <th>num_pumps_attending</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>count</th>\n",
-       "      <td>32247.0</td>\n",
-       "      <td>32179.0</td>\n",
-       "      <td>32179.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>mean</th>\n",
-       "      <td>13.465222</td>\n",
-       "      <td>1.356537</td>\n",
-       "      <td>1.536375</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>std</th>\n",
-       "      <td>6.152739</td>\n",
-       "      <td>0.6114</td>\n",
-       "      <td>0.741248</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>min</th>\n",
-       "      <td>0.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>1.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>25%</th>\n",
-       "      <td>9.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>1.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>50%</th>\n",
-       "      <td>14.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>1.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>75%</th>\n",
-       "      <td>18.0</td>\n",
-       "      <td>2.0</td>\n",
-       "      <td>2.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>max</th>\n",
-       "      <td>23.0</td>\n",
-       "      <td>6.0</td>\n",
-       "      <td>7.0</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "       hour_of_call  num_stations_with_pumps_attending  num_pumps_attending\n",
-       "count       32247.0                            32179.0              32179.0\n",
-       "mean      13.465222                           1.356537             1.536375\n",
-       "std        6.152739                             0.6114             0.741248\n",
-       "min             0.0                                1.0                  1.0\n",
-       "25%             9.0                                1.0                  1.0\n",
-       "50%            14.0                                1.0                  1.0\n",
-       "75%            18.0                                2.0                  2.0\n",
-       "max            23.0                                6.0                  7.0"
-      ]
-     },
-     "execution_count": 8,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Run the describe function to explore the core basic descriptive statistics\n",
     "fire_numerical_describe.describe()"
@@ -558,41 +265,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "id": "b1933e10-09b9-4a00-90b4-625d492fcbd4",
    "metadata": {
     "tags": []
    },
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "782687f1f03740019cf681034fc3b1d3",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Query is running:   0%|          |"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "ab833da2c8c8438ab61c55e44cdd17bb",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Downloading:   0%|          |"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "%%bigquery crosstab_explore_data\n",
     "SELECT \n",
@@ -604,122 +282,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "id": "caf8e094-9860-4f7b-ae7f-a0ccff7d763b",
    "metadata": {
     "tags": []
    },
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th>property_category</th>\n",
-       "      <th>Aircraft</th>\n",
-       "      <th>Boat</th>\n",
-       "      <th>Dwelling</th>\n",
-       "      <th>Non Residential</th>\n",
-       "      <th>Other Residential</th>\n",
-       "      <th>Outdoor</th>\n",
-       "      <th>Outdoor Structure</th>\n",
-       "      <th>Rail Vehicle</th>\n",
-       "      <th>Road Vehicle</th>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>incident_group</th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>False Alarm</th>\n",
-       "      <td>5</td>\n",
-       "      <td>3</td>\n",
-       "      <td>7032</td>\n",
-       "      <td>6089</td>\n",
-       "      <td>1455</td>\n",
-       "      <td>558</td>\n",
-       "      <td>253</td>\n",
-       "      <td>4</td>\n",
-       "      <td>333</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Fire</th>\n",
-       "      <td>0</td>\n",
-       "      <td>9</td>\n",
-       "      <td>1856</td>\n",
-       "      <td>721</td>\n",
-       "      <td>113</td>\n",
-       "      <td>1383</td>\n",
-       "      <td>1604</td>\n",
-       "      <td>4</td>\n",
-       "      <td>744</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Special Service</th>\n",
-       "      <td>20</td>\n",
-       "      <td>12</td>\n",
-       "      <td>6352</td>\n",
-       "      <td>959</td>\n",
-       "      <td>228</td>\n",
-       "      <td>653</td>\n",
-       "      <td>147</td>\n",
-       "      <td>10</td>\n",
-       "      <td>1700</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "property_category  Aircraft  Boat  Dwelling  Non Residential  \\\n",
-       "incident_group                                                 \n",
-       "False Alarm               5     3      7032             6089   \n",
-       "Fire                      0     9      1856              721   \n",
-       "Special Service          20    12      6352              959   \n",
-       "\n",
-       "property_category  Other Residential  Outdoor  Outdoor Structure  \\\n",
-       "incident_group                                                     \n",
-       "False Alarm                     1455      558                253   \n",
-       "Fire                             113     1383               1604   \n",
-       "Special Service                  228      653                147   \n",
-       "\n",
-       "property_category  Rail Vehicle  Road Vehicle  \n",
-       "incident_group                                 \n",
-       "False Alarm                   4           333  \n",
-       "Fire                          4           744  \n",
-       "Special Service              10          1700  "
-      ]
-     },
-     "execution_count": 10,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Crosstab in Pandas \n",
     "## https://pandas.pydata.org/docs/reference/api/pandas.crosstab.html\n",
@@ -757,9 +325,24 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "545fa2ed-4823-4ef1-be6d-997708844d6c",
+   "metadata": {},
+   "source": [
+    "## Extension: Going beyond today's session!\n",
+    "\n",
+    "\n",
+    "If you would like to explore these skills and explore further, our suggestion is to rerun these exercises with the Hurricanes Dataset used within the worksheet's Section 3c. Focusing on variables such as 'mlc_class', 'mlc_wind' and 'mlc_pressure' and how this varies from other metrics such as nadi, usa and cma. These however will not have solutions here, but we will be happy to discuss them during the deep dive to help fuel your imagination! \n",
+    "\n",
+    "## Acknowledgements\n",
+    "\n",
+    "Massive thank you to the Analytical Capability team for their support developing this demonstration and practical, alongside Anthony Lazzaro from Google for their support in putting this together and supporting with the adminstration of the session! "
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8d3f88a0-fb29-44e9-8ae7-ca4e12868f07",
+   "id": "c7eaf22b-77f3-4a82-81c4-2fa6a5404419",
    "metadata": {},
    "outputs": [],
    "source": []
