--- a/IDS_deepdive_demo_solutions.ipynb
+++ b/IDS_deepdive_demo_solutions.ipynb
@@ -25,7 +25,9 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "49dda492-5198-48ae-b693-eaef8e34dd0d",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "# Install a pip package in the current Jupyter kernel\n",
@@ -56,18 +58,19 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "cc055f13-0e6f-468e-9194-c64b2cd46fb8",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "# Fill in the Blanks\n",
     "\n",
     "# Load data from BigQuery\n",
-    "print(\"step 1-of-3 :: loading data from BigQuery\")\n",
-    "query_or_table = \"bigquery-public-data.london_fire_brigade.---\" # [Insert the table name here]\n",
-    "bq_df = bpd.read_gbq(---, use_cache=False) # [Insert Variable Name Here]\n",
+    "query_or_table = \"bigquery-public-data.london_fire_brigade.fire_brigade_service_calls\" # [Insert the table name here]\n",
+    "bq_df = bpd.read_gbq(query_or_table, use_cache=False) # [Insert Variable Name Here]\n",
     "\n",
     "# Double Check the column names \n",
-    "list(---) # [Insert Read in GBQ Data]"
+    "list(bq_df) # [Insert Read in GBQ Data]"
    ]
   },
   {
@@ -82,43 +85,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "c4aac1d3-3d97-457b-8737-d176236a2f9c",
    "metadata": {
     "tags": []
    },
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "11c9feb6337442038cd1953093469e68",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Query is running:   0%|          |"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "bfc4013b7d0b4d039070399f9fcc581c",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Downloading:   0%|          |"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "%%bigquery hour_of_call_propertycategory\n",
+    "%%bigquery hour_of_call_outdoorcategory\n",
     "SELECT\n",
     "    hour_of_call,\n",
     "    COUNT(DISTINCT incident_number) as incident_number_count\n",
@@ -134,197 +108,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "id": "5a9fc0b3-2f2c-409f-9b58-c3c73fef8c45",
    "metadata": {
     "tags": []
    },
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>hour_of_call</th>\n",
-       "      <th>incident_number_count</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>0</td>\n",
-       "      <td>66</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>1</td>\n",
-       "      <td>58</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>2</td>\n",
-       "      <td>36</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>3</td>\n",
-       "      <td>23</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>4</td>\n",
-       "      <td>20</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5</th>\n",
-       "      <td>5</td>\n",
-       "      <td>21</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>6</th>\n",
-       "      <td>6</td>\n",
-       "      <td>26</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>7</th>\n",
-       "      <td>7</td>\n",
-       "      <td>47</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>8</th>\n",
-       "      <td>8</td>\n",
-       "      <td>50</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>9</th>\n",
-       "      <td>9</td>\n",
-       "      <td>68</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>10</th>\n",
-       "      <td>10</td>\n",
-       "      <td>72</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>11</th>\n",
-       "      <td>11</td>\n",
-       "      <td>109</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>12</th>\n",
-       "      <td>12</td>\n",
-       "      <td>110</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>13</th>\n",
-       "      <td>13</td>\n",
-       "      <td>136</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>14</th>\n",
-       "      <td>14</td>\n",
-       "      <td>167</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>15</th>\n",
-       "      <td>15</td>\n",
-       "      <td>181</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>16</th>\n",
-       "      <td>16</td>\n",
-       "      <td>223</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>17</th>\n",
-       "      <td>17</td>\n",
-       "      <td>214</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>18</th>\n",
-       "      <td>18</td>\n",
-       "      <td>248</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>19</th>\n",
-       "      <td>19</td>\n",
-       "      <td>218</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>20</th>\n",
-       "      <td>20</td>\n",
-       "      <td>185</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>21</th>\n",
-       "      <td>21</td>\n",
-       "      <td>123</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>22</th>\n",
-       "      <td>22</td>\n",
-       "      <td>120</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>23</th>\n",
-       "      <td>23</td>\n",
-       "      <td>73</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "    hour_of_call  incident_number_count\n",
-       "0              0                     66\n",
-       "1              1                     58\n",
-       "2              2                     36\n",
-       "3              3                     23\n",
-       "4              4                     20\n",
-       "5              5                     21\n",
-       "6              6                     26\n",
-       "7              7                     47\n",
-       "8              8                     50\n",
-       "9              9                     68\n",
-       "10            10                     72\n",
-       "11            11                    109\n",
-       "12            12                    110\n",
-       "13            13                    136\n",
-       "14            14                    167\n",
-       "15            15                    181\n",
-       "16            16                    223\n",
-       "17            17                    214\n",
-       "18            18                    248\n",
-       "19            19                    218\n",
-       "20            20                    185\n",
-       "21            21                    123\n",
-       "22            22                    120\n",
-       "23            23                     73"
-      ]
-     },
-     "execution_count": 6,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "hour_of_call_propertycategory"
+    "# Lets check what results you got!\n",
+    "hour_of_call_outdoorcategory"
    ]
   },
   {
@@ -337,43 +129,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "id": "646302a3-ab37-4217-a2fe-dcbbd0c38198",
    "metadata": {
     "tags": []
    },
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "fc84db030a0d4c10b819c79de6539b43",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Query is running:   0%|          |"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "94bc8f31f3ac41edb74c72c952094206",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Downloading:   0%|          |"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "%%bigquery hour_of_call_propertycategory\n",
+    "%%bigquery hour_of_call_dwellingcategory\n",
     "SELECT\n",
     "    incident_group,\n",
     "    COUNT(DISTINCT incident_number) as incident_number_count\n",
@@ -389,80 +152,212 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "id": "9408a79b-1721-426c-8525-b7283b0bc9f0",
    "metadata": {
     "tags": []
    },
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>incident_group</th>\n",
-       "      <th>incident_number_count</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>False Alarm</td>\n",
-       "      <td>7032</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>Fire</td>\n",
-       "      <td>1856</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>Special Service</td>\n",
-       "      <td>6352</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "    incident_group  incident_number_count\n",
-       "0      False Alarm                   7032\n",
-       "1             Fire                   1856\n",
-       "2  Special Service                   6352"
-      ]
-     },
-     "execution_count": 8,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "hour_of_call_propertycategory"
+    "hour_of_call_dwellingcategory"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "57e0be43-19e6-4ac1-9ecd-107f9a1fc3df",
+   "metadata": {
+    "tags": []
+   },
+   "source": [
+    "## Section 3c: Basic Descriptive Statistics\n",
+    "\n",
+    "As we have already explored all of the available numerical variables for the given dataset, lets jump across to a slightly different dataset to explore this skill further. \n",
+    "\n",
+    "Using the staged prompts available, explore the dataset \"\n",
+    "bigquery-public-data.noaa_hurricanes.hurricanes\", particularly exploring the numerical data and producing basic descriptive statistics for: \n",
+    "\n",
+    "- wmo_wind \n",
+    "- wmo_pressure \n",
+    "- usa_wind\n",
+    "- usa_pressure\n",
+    "- cma_presure \n",
+    "\n",
+    "Please check the solution sheet for our answer, however, like most programming, there will always be multiple ways to conduct this analysis! "
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5f27515f-5030-4218-9511-76be2012db1e",
-   "metadata": {},
+   "id": "190fbf08-e0da-49b2-9ecd-a0f0f05efc7d",
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
-   "source": []
+   "source": [
+    "%%bigquery hurricane_description\n",
+    "SELECT \n",
+    "    wmo_wind, \n",
+    "    wmo_pressure,\n",
+    "    usa_wind, \n",
+    "    usa_pressure, \n",
+    "    cma_pressure\n",
+    "FROM \n",
+    "    bigquery-public-data.noaa_hurricanes.hurricanes\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "eaf573fe-aaa0-4edc-974e-9e31ee18e6a2",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "hurricane_description.describe()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "bd25651c-4cc2-42e4-a5b9-e36ffb274e07",
+   "metadata": {},
+   "source": [
+    "## Section 3d: Building Cross Tabs\n",
+    "\n",
+    "Lets build some more complex crosstabs, for this we will explore the 'stop_code_description', and 'property_category'. \n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c0456102-76d9-4b1c-abc7-c6f18c428384",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "%%bigquery crosstab_explore_data_stopcategory\n",
+    "SELECT \n",
+    "    stop_code_description,\n",
+    "    property_category\n",
+    "FROM \n",
+    "    bigquery-public-data.london_fire_brigade.fire_brigade_service_calls"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "fcf08948-1a64-4dce-a70a-35f069cba714",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "# Crosstab in Pandas \n",
+    "## https://pandas.pydata.org/docs/reference/api/pandas.crosstab.html\n",
+    "pd.crosstab(\n",
+    "    crosstab_explore_data_stopcategory.stop_code_description, \n",
+    "    crosstab_explore_data_stopcategory.property_category)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d8d3fbbb-05d2-4927-b6cc-dd4004a7ea22",
+   "metadata": {},
+   "source": [
+    "Taking this further, we can now explore the breakdown between \"stop_code_description\" and \"property_type\". "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "95396f3c-5a81-4aea-b8fe-bc14277b22ef",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "%%bigquery crosstab_explore_data_stoptype\n",
+    "SELECT \n",
+    "    stop_code_description,\n",
+    "    property_type\n",
+    "FROM \n",
+    "    bigquery-public-data.london_fire_brigade.fire_brigade_service_calls"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d5e4b29a-605e-439d-a2b3-59f83763e265",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "# Crosstab in Pandas \n",
+    "## https://pandas.pydata.org/docs/reference/api/pandas.crosstab.html\n",
+    "pd.crosstab(\n",
+    "    crosstab_explore_data_stoptype.stop_code_description, \n",
+    "    crosstab_explore_data_stoptype.property_type)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d5e03470-1661-441a-8ac4-5d4a34913119",
+   "metadata": {},
+   "source": [
+    "## Section 4: Data Visualisations \n",
+    "\n",
+    "Once again, using the results from Section 3b, we can create visualisations using matplotlib! "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a80fbe43-7a24-4b9e-a482-e21d2d9da6ab",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "# Bar Chat 1: \n",
+    "    # For this we will want to call hour of call vs incident number count \n",
+    "plt.bar(hour_of_call_outdoorcategory.hour_of_call, \n",
+    "        hour_of_call_outdoorcategory.incident_number_count)\n",
+    "# Label our X and Y axis and Title \n",
+    "plt.xlabel('Hour of Call')\n",
+    "plt.ylabel('Number of Incidents')\n",
+    "plt.title('Number of Incidents recorded for Outdoor Callouts per Hour')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4663a795-a3d0-467c-acb9-e218c64d2208",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "# Bar Chat 2: \n",
+    "    # For this we will want to call Incident Group vs incident number count \n",
+    "plt.bar(hour_of_call_dwellingcategory.incident_group, \n",
+    "        hour_of_call_dwellingcategory.incident_number_count)\n",
+    "# Label our X and Y axis and Title \n",
+    "plt.xlabel('Incident Group')\n",
+    "plt.ylabel('Number of Incidents')\n",
+    "plt.title('Number of Incidents recorded per Incident Group')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d3a89c56-308c-46fb-9b7a-a4bf20d3dff6",
+   "metadata": {},
+   "source": [
+    "## Extension\n",
+    "\n",
+    "If you would like to explore these skills and explore further, our suggestion is to rerun these exercises with the Hurricanes Dataset used within Section 3c. Focusing on variables such as 'mlc_class', 'mlc_wind' and 'mlc_pressure' and how this varies from other metrics such as nadi, usa and cma. These however will not have solutions here, but we will be happy to discuss them during the deep dive to help fuel your imagination! \n"
+   ]
   }
  ],
  "metadata": {
